Added redis client, test api for redis.
