# api/swagger/swagger.yaml
@@ -43,11 +43,9 @@ paths:
           schema:
             $ref: "#/definitions/ErrorResponse"
   /mongo-api:
-    # binds a127 app logic to a route
     x-swagger-router-controller: hello_world
     get:
       description: Returns 'Hello' to the caller
-      # used as the method name of the controller
       operationId: testMongo
       parameters:
         - name: name
@@ -59,9 +57,27 @@ paths:
         "200":
           description: Success
           schema:
-            # a pointer to a definition
             $ref: "#/definitions/HelloWorldResponse"
-        # responses may fall through to errors
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+  /redis-api:
+    x-swagger-router-controller: hello_world
+    get:
+      description: Returns 'Hello' to the caller
+      operationId: testRedis
+      parameters:
+        - name: name
+          in: query
+          description: The name of the person to whom to say hello
+          required: false
+          type: string
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: "#/definitions/HelloWorldResponse"
         default:
           description: Error
           schema:
